--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>This is the header</h1>
+    <section>
+        <div>
+        <article> Hey look an article</article>
+        </div>
+        <div>
+            <p>and a paragraph!</p>
+        </div>
+        <div>
+            <em>and something with semantic emphasis</em>
+        </div>
+    </section>
 </body>
 </html>
