--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <div>
             <em>and something with semantic emphasis</em>
         </div>
+        <p>oops, i did it again</p>
+        <h2>I started a branch, merged it like a train</h2>
     </section>
 </body>
 </html>
